# Child_Care_Data

./: LICENCE  README.md  setup.cfg  setup.py
.github/workflows/: main.yml  python-package.yml  python-publish.yml
childcaredatabw/: __init__.py  child_care_data.py  child_care_data_csv.py
childcaredatabw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: ProjectDescription.md  child_care_data.html  child_care_data_csv.html
tests/: child_care_data.csv  child_care_data_corrupted.csv  test_pytest.py  test_unittest.py
tests/test_pytest/: test_child_care_data.yml
