[metadata]
name = childcaredatabw
version = 0.0.1
author = Hana Boukricha
author_email = bouricha.hana@gmail.com
description = API to retrieve child care data in Baden Wuertemberg 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hboukricha/Child_Care_Data
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6